Adding htmx support